<resources>
    <string name="app_name">SegundaProva</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buttonCadastrar">Create</string>
    <string name="formName">Name</string>
    <string name="director">Director</string>
    <string name="developer">Developer</string>
    <string name="publisher">Publisher</string>
    <string name="release_year">Release Year</string>
    <string name="rating">Rating</string>
    <string name="cadastra">Cadastra</string>
    <string name="sobre">Sobre</string>
</resources>