<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CadastraFragment">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/buttonCadastrar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/formName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextDirector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/director"
            app:layout_constraintStart_toStartOf="@+id/editTextName"
            app:layout_constraintTop_toBottomOf="@+id/editTextName"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextDeveloper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/developer"
            app:layout_constraintStart_toStartOf="@+id/editTextDirector"
            app:layout_constraintTop_toBottomOf="@+id/editTextDirector"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextPublisher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/publisher"
            app:layout_constraintStart_toStartOf="@+id/editTextDeveloper"
            app:layout_constraintTop_toBottomOf="@+id/editTextDeveloper"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextReleaseYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/release_year"
            android:inputType="number"
            android:maxLength="4"
            app:layout_constraintStart_toStartOf="@+id/editTextPublisher"
            app:layout_constraintTop_toBottomOf="@+id/editTextPublisher" />

        <EditText
            android:id="@+id/editTextRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/rating"
            android:inputType="number"
            android:maxLength="2"
            app:layout_constraintStart_toStartOf="@+id/editTextReleaseYear"
            app:layout_constraintTop_toBottomOf="@+id/editTextReleaseYear" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>