<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CadastraFragment">

        <Button
            android:id="@+id/buttonAl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/buttonCadastrar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextNameAl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/formName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextDirectorAl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/director"
            app:layout_constraintStart_toStartOf="@+id/editTextNameAl"
            app:layout_constraintTop_toBottomOf="@+id/editTextNameAl"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextDeveloperAl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/developer"
            app:layout_constraintStart_toStartOf="@+id/editTextDirectorAl"
            app:layout_constraintTop_toBottomOf="@+id/editTextDirectorAl"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextPublisherAl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/publisher"
            app:layout_constraintStart_toStartOf="@+id/editTextDeveloperAl"
            app:layout_constraintTop_toBottomOf="@+id/editTextDeveloperAl"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextReleaseYearAl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/release_year"
            android:inputType="number"
            android:maxLength="4"
            app:layout_constraintStart_toStartOf="@+id/editTextPublisherAl"
            app:layout_constraintTop_toBottomOf="@+id/editTextPublisherAl" />

        <EditText
            android:id="@+id/editTextRatingAl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/rating"
            android:inputType="number"
            android:maxLength="2"
            app:layout_constraintStart_toStartOf="@+id/editTextReleaseYearAl"
            app:layout_constraintTop_toBottomOf="@+id/editTextReleaseYearAl" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>